--- a/pages/submit-greet.html
+++ b/pages/submit-greet.html
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link align-items-center d-flex active" aria-current="page" href="./summary.html">
+                            <a class="nav-link align-items-center d-flex" aria-current="page" href="./summary.html">
                                 <div
                                     class="step-count flex-shrink-0 d-flex align-items-center justify-content-center rounded-circle border border-2 me-4">
                                     <h6 class="count-number mb-0 text-white">4</h6>
