FIX: 'lable issue'

--- a/index.html
+++ b/index.html
@@ -25,43 +25,50 @@
                                     <h6 class="count-number mb-0 text-white">1</h6>
                                 </div>
                                 <div class="step-info d-none d-lg-block">
-                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 1</h6>
+                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 1
+                                    </h6>
                                     <h6 class="step-count-title text-uppercase text-white mb-0">your info</h6>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link align-items-center d-flex" aria-current="page"  href="#" onclick="onSubmitForm(event)">
+                            <a class="nav-link align-items-center d-flex" aria-current="page" href="#"
+                                onclick="onSubmitForm(event)">
                                 <div
                                     class="step-count flex-shrink-0 d-flex align-items-center justify-content-center rounded-circle border border-2 me-4">
                                     <h6 class="count-number mb-0 text-white">2</h6>
                                 </div>
                                 <div class="step-info d-none d-lg-block">
-                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 2</h6>
+                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 2
+                                    </h6>
                                     <h6 class="step-count-title text-uppercase text-white mb-0 ">select plan</h6>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link align-items-center d-flex" aria-current="page" href="#" onclick="onSubmitForm(event)" >
+                            <a class="nav-link align-items-center d-flex" aria-current="page" href="#"
+                                onclick="onSubmitForm(event)">
                                 <div
                                     class="step-count flex-shrink-0 d-flex align-items-center justify-content-center rounded-circle border border-2 me-4">
                                     <h6 class="count-number mb-0 text-white">3</h6>
                                 </div>
                                 <div class="step-info d-none d-lg-block">
-                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 3</h6>
+                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 3
+                                    </h6>
                                     <h6 class="step-count-title text-uppercase text-white mb-0 ">add-ons</h6>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link align-items-center d-flex" aria-current="page" href="#" onclick="onSubmitForm(event)">
+                            <a class="nav-link align-items-center d-flex" aria-current="page" href="#"
+                                onclick="onSubmitForm(event)">
                                 <div
                                     class="step-count flex-shrink-0 d-flex align-items-center justify-content-center rounded-circle border border-2 me-4">
                                     <h6 class="count-number mb-0 text-white">4</h6>
                                 </div>
                                 <div class="step-info d-none d-lg-block">
-                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 4</h6>
+                                    <h6 class="text-uppercase fw-normal mb-1 step-number text-white opacity-50">step 4
+                                    </h6>
                                     <h6 class="step-count-title text-uppercase text-white mb-0 ">summary</h6>
                                 </div>
                             </a>
@@ -70,7 +77,7 @@
                     </ul>
                 </nav>
                 <!-- sidebar-start -->
-    
+
                 <!-- form-start -->
                 <form class="form-main h-100 flex-grow-1 d-flex flex-column justify-content-between">
                     <div class="form-info px-5 px-lg-0 py-5 py-lg-3 mx-3 mx-lg-0 mb-5">
@@ -78,28 +85,41 @@
                         <p class="text-light mb-4">Please provide your name, email address, and phone number.</p>
                         <div class="mb-4 pt-2">
                             <div class="d-flex justify-content-between">
-                                <label for="exmapleInputName" class="form-label"><h6 class="text-primary">Name</h6></label>
-                                <label class="form-label error d-none text-danger"><h6>This field is required</h6></label>
+                                <h6 class="text-primary"><label for="exmapleInputName" class="form-label">Name</label>
+                                </h6>
+                                <h6><label class="form-label error d-none text-danger">
+                                        This field is required
+                                    </label></h6>
                             </div>
-                            <input type="text" class="form-control fw-bold text-primary" name="userName" id="exmapleInputName" placeholder="e.g. Stephen King">
+                            <input type="text" class="form-control fw-bold text-primary" name="userName"
+                                id="exmapleInputName" placeholder="e.g. Stephen King">
                         </div>
                         <div class="mb-4">
                             <div class="d-flex justify-content-between">
-                            <label for="exampleInputEmail1" class="form-label"><h6 class="text-primary">Email address</h6></label>
-                            <label class="form-label error d-none text-danger"><h6>This field is required</h6></label>
+                                <h6 class="text-primary"> <label for="exampleInputEmail1" class="form-label">Email
+                                        address</label></h6>
+                                <h6> <label class="form-label error d-none text-danger">
+                                        This field is required
+                                    </label></h6>
                             </div>
-                            <input type="email" class="form-control fw-bold text-primary" id="exampleInputEmail1" placeholder="e.g. stephenking@lorem.com">
+                            <input type="email" class="form-control fw-bold text-primary" id="exampleInputEmail1"
+                                placeholder="e.g. stephenking@lorem.com">
                         </div>
                         <div class="mb-4">
                             <div class="d-flex justify-content-between">
-                            <label for="exmapleInputPhone" class="form-label"><h6 class="text-primary">Phone Number</h6></label>
-                            <label class="form-label error d-none text-danger"><h6>This field is required</h6></label>                            
+                                <h6 class="text-primary"><label for="exmapleInputPhone" class="form-label">
+                                        Phone Number
+                                    </label></h6>
+                                <h6><label class="form-label error d-none text-danger">This field is required </label>
+                                </h6>
                             </div>
-                            <input type="text" class="form-control fw-bold text-primary" id="exmapleInputPhone" placeholder="e.g. +1 234 567 890" maxlength="10">
-                        </div>                
+                            <input type="text" class="form-control fw-bold text-primary" id="exmapleInputPhone"
+                                placeholder="e.g. +1 234 567 890" maxlength="10">
+                        </div>
                     </div>
                     <div class="text-end px-3 px-lg-0 bg-white py-3 py-lg-0">
-                        <a class="text-white text-decoration-none"  ><button type="button" class="btn btn-primary fw-semibold" onclick="onSubmitForm(event)">Next Step</button></a>                        
+                        <a class="text-white text-decoration-none"><button type="button"
+                                class="btn btn-primary fw-semibold" onclick="onSubmitForm(event)">Next Step</button></a>
                     </div>
                 </form>
                 <!-- form-end -->
