--- a/pages/plans.html
+++ b/pages/plans.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="d-flex justify-content-between px-lg-0 bg-white py-3 py-lg-0 px-3">
                         <a class="text-light text-decoration-none align-self-center back-button fw-semibold" href="../index.html">Go Back</a>
-                        <a class="text-white text-decoration-none" href="./add-ons.html"><button type="button" class="btn btn-primary fw-bold">Next Step</button></a>
+                        <button type="button" class="btn btn-primary fw-bold"><a class="text-white text-decoration-none" href="./add-ons.html">Next Step</a></button>
                     </div>
                 </form>
                 <!-- form-end -->
