--- a/pages/summary.html
+++ b/pages/summary.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="d-flex justify-content-between px-3 px-lg-0 bg-white py-3 py-lg-0">
                         <a class="text-light text-decoration-none align-self-center back-button fw-semibold" href="./add-ons.html">Go Back</a>
-                        <a class="text-white text-decoration-none" href="./submit-greet.html"><button type="button" class="btn btn-secondary fw-semibold">Confirm</button></a>
+                        <button type="button" class="btn btn-secondary fw-semibold"><a class="text-white text-decoration-none" href="./submit-greet.html">Confirm</a></button>
                     </div>
                 </form>
                 <!-- form-end -->
