--- a/pages/add-ons.html
+++ b/pages/add-ons.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="d-flex justify-content-between px-3 px-lg-0 bg-white py-3 py-lg-0">
                         <a class="text-light text-decoration-none align-self-center back-button fw-semibold" href="./plans.html">Go Back</a>
-                        <a class="text-white text-decoration-none" href="./summary.html"> <button type="button" class="btn btn-primary fw-semibold">Next Step</button></a>
+                         <button type="button" class="btn btn-primary fw-semibold"><a class="text-white text-decoration-none" href="./summary.html">Next Step</a></button>
                     </div>
                 </form>
                 <!-- form-end -->
