fix:''unnecessary attribute"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="main h-100 w-100 bg-magnolia d-block" role="main">
+    <main class="main h-100 w-100 bg-magnolia d-block">
         <div class="container-wrapper d-lg-flex align-items-center h-100">
             <!-- form-wrapper-start -->
             <div class="form-wrapper w-100 d-flex flex-column flex-lg-row p-0 p-lg-4 shadow-sm">
@@ -80,7 +80,7 @@
 
                 <!-- form-start -->
                 <form class="form-main h-100 flex-grow-1 d-flex flex-column justify-content-between">
-                    <div class="form-info px-5 px-lg-0 py-5 py-lg-3 mx-3 mx-lg-0 mb-5" role="heading info">
+                    <div class="form-info px-5 px-lg-0 py-5 py-lg-3 mx-3 mx-lg-0 mb-5">
                         <h2 class="text-primary fw-semibold pt-3 mb-2">Personal info</h2>
                         <p class="text-light mb-4">Please provide your name, email address, and phone number.</p>
                         <div class="mb-4 pt-2">
